add comments and benchmarking results

--- a/example/model/huggingface_model.ipynb
+++ b/example/model/huggingface_model.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "In this example, we will show you how to generate question-answers (QAs) from give text strings using open-source Huggingface models via uniflow's [HuggingFaceModelFlow](https://github.com/CambioML/uniflow/blob/main/uniflow/flow/model_flow.py#L86).\n",
     "\n",
-    "## Before running the code\n",
+    "### Before running the code\n",
     "\n",
     "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation.\n",
     "\n",
-    "## Update system path"
+    "### Update system path"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import dependency"
+    "### Import dependency"
    ]
   },
   {
@@ -91,7 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_instruction = \"\"\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\"\"\"\n",
+    "sample_instruction = \"\"\"Generate one question and its corresponding answer based on the context. Following \\\n",
+    "the format of the examples below to include context, question, and answer in the response.\"\"\"\n",
     "\n",
     "sample_json_format = [        \n",
     "        {\n",
@@ -110,33 +111,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, for the given raw text strings `raw_context_input` below, we can decorate them with our sample prompts. "
+    "Second, we craft some dummy sample raw text strings. Below, we build a dataset with 400 text strings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# raw_context_input = [\n",
-    "#     \"\"\"We believe our success depends upon our capabilities in areas such as design, research and development, \\\n",
-    "# production and marketing and is supported and protected by our intellectual property rights, such as trademarks, \\\n",
-    "# utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for \\\n",
-    "# and registering intellectual property rights in the United States and select foreign countries on trademarks, \\\n",
-    "# inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our \\\n",
-    "# intellectual property, including trademarks, patents and trade secrets against third-party infringement \\\n",
-    "# and misappropriation.\"\"\",\n",
-    "#     \"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of \\\n",
-    "# information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our \\\n",
-    "# journey here.\"\"\",\n",
-    "#     \"\"\"The chain rule states that the derivative of a composite function (a function composed of another function) is equal to \\\n",
-    "# the derivative of the outer function multiplied by the derivative of the inner function. Mathematically, it can be \\\n",
-    "# written as: \\(\\frac{d}{dx}g(h(x)) = \\frac{dg}{dh}(h(x))\\cdot \\frac{dh}{dx}(x)\\).\"\"\",\n",
-    "#     \"\"\"Hypothesis testing involves making a claim about a population parameter based on sample data, and then conducting a test \\\n",
-    "# to determine whether this claim is supported or rejected. This typically involves calculating a test statistic, \\\n",
-    "# determining a significance level, and comparing the calculated value to a critical value to obtain a p-value. \"\"\"\n",
-    "# ]\n"
+    "raw_context_input = [\n",
+    "    \"\"\"We believe our success depends upon our capabilities in areas such as design, research and development, \\\n",
+    "production and marketing and is supported and protected by our intellectual property rights, such as \\\n",
+    "trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy \\\n",
+    "of applying for and registering intellectual property rights in the United States and select foreign countries \\\n",
+    "on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously \\\n",
+    "protect our intellectual property, including trademarks, patents and trade secrets against third-party \\ \n",
+    "infringement and misappropriation.\"\"\",\n",
+    "    \"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) \\\n",
+    "establishing the theory of information. In his article, Shannon introduced the concept of information entropy \\\n",
+    "for the first time. We will begin our journey here.\"\"\",\n",
+    "    \"\"\"The chain rule states that the derivative of a composite function (a function composed of another \\\n",
+    "function) is equal to the derivative of the outer function multiplied by the derivative of the inner function.\\\n",
+    "Mathematically, it can be written as: \\(\\frac{d}{dx}g(h(x)) = \\frac{dg}{dh}(h(x))\\cdot \\frac{dh}{dx}(x)\\).\"\"\",\n",
+    "    \"\"\"Hypothesis testing involves making a claim about a population parameter based on sample data, and then \\\n",
+    "conducting a test to determine whether this claim is supported or rejected. This typically involves \\\n",
+    "calculating a test statistic, determining a significance level, and comparing the calculated value to a \\ \n",
+    "critical value to obtain a p-value. \"\"\"\n",
+    "]\n",
+    "\n",
+    "raw_context_input_400 = raw_context_input * 100\n",
+    "\n",
+    "print(\"sample size of raw context: \", len(raw_context_input_400))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, for the given raw text strings `raw_context_input` below, we can decorate them with our sample prompts. "
    ]
   },
   {
@@ -187,33 +200,39 @@
     }
    ],
    "source": [
-    "raw_context_input = [\n",
-    "    \"\"\"We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.\"\"\",\n",
-    "    \"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.\"\"\",\n",
-    "    \"\"\"The chain rule states that the derivative of a composite function (a function composed of another function) is equal to the derivative of the outer function multiplied by the derivative of the inner function. Mathematically, it can be written as: \\(\\frac{d}{dx}g(h(x)) = \\frac{dg}{dh}(h(x))\\cdot \\frac{dh}{dx}(x)\\).\"\"\",\n",
-    "    \"\"\"Hypothesis testing involves making a claim about a population parameter based on sample data, and then conducting a test to determine whether this claim is supported or rejected. This typically involves calculating a test statistic, determining a significance level, and comparing the calculated value to a critical value to obtain a p-value. \"\"\"\n",
-    "]\n",
     "\n",
     "raw_context_input_with_prompt = [\n",
     "    {\"instruction\": sample_instruction, \"examples\": sample_json_format + [{\"context\": data}]}\n",
-    "    for data in raw_context_input\n",
+    "    for data in raw_context_input_400\n",
     "]\n",
+    "print(\"sample size of processed raw context with prompts: \", len(raw_context_input_400_with_prompt))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's print the first two data points:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_context_input_with_prompt[:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use LLM to generate data\n",
     "\n",
-    "raw_context_input_with_prompt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run model flow to generate data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: figure out the optimal batchsize."
+    "In this example, we will use the [HuggingfaceModelServer](https://github.com/CambioML/uniflow/blob/main/uniflow/model/server.py#L170)'s default LLM to generate questions and answers. Let's import the config and client of this model.\n",
+    "\n",
+    "Note, base on your GPU memory, you can set your optimal `batch_size` below. (We attached our `batch_size` benchmarking results in the appendix of this notebook.)"
    ]
   },
   {
@@ -234,7 +253,7 @@
     }
    ],
    "source": [
-    "config = HuggingfaceConfig(model_config=HuggingfaceModelConfig(batch_size=4))\n",
+    "config = HuggingfaceConfig(model_config=HuggingfaceModelConfig(batch_size=256))\n",
     "client = Client(config)"
    ]
   },
@@ -265,19 +284,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "o = output[0]['output'][0]['response'][0]"
+    "### Process the output\n",
+    "\n",
+    "Let's take a look of the generation output. We need to do a little postprocessing on the raw output."
    ]
   },
   {
@@ -287,50 +299,48 @@
    "outputs": [],
    "source": [
     "import re\n",
+    "from pprint import pprint\n",
+    "\n",
     "keywords = [\"context:\", \"question:\", \"answer:\"]\n",
     "pattern = '|'.join(map(re.escape, keywords))\n",
     "\n",
+    "o = output[0]['output'][0]['response'][0]\n",
     "segments = [segment for segment in re.split(pattern, o) if segment.strip()]\n",
     "result = {\n",
     "    \"context\": segments[-3],\n",
     "    \"question\": segments[-2],\n",
     "    \"answer\": segments[-1]\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "pprint(result, sort_dicts=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'context': ' We believe our success depends upon our capabilities in areas '\n",
-      "            'such as design, research and development, production and '\n",
-      "            'marketing and is supported and protected by our intellectual '\n",
-      "            'property rights, such as trademarks, utility and design patents, '\n",
-      "            'copyrights, and trade secrets, among others. We have followed a '\n",
-      "            'policy of applying for and registering intellectual property '\n",
-      "            'rights in the United States and select foreign countries on '\n",
-      "            'trademarks, inventions, innovations and designs that we deem '\n",
-      "            'valuable. W e also continue to vigorously protect our '\n",
-      "            'intellectual property, including trademarks, patents and trade '\n",
-      "            'secrets against third-party infringement and misappropriation.\\n',\n",
-      " 'question': ' How does the company protect their intellectual property?\\n',\n",
-      " 'answer': ' The company protects their intellectual property through various '\n",
-      "           'means such as trademarks, patents, copyrights, and trade secrets. '\n",
-      "           'They apply for and register these intellectual properties in the '\n",
-      "           'United States and select foreign countries. Additionally, they '\n",
-      "           'actively monitor and enforce their intellectual property rights '\n",
-      "           'against any potential infringement or misappropriation.'}\n"
-     ]
-    }
-   ],
    "source": [
-    "from pprint import pprint\n",
-    "pprint(result, sort_dicts=False)"
+    "## Appendix\n",
+    "\n",
+    "We benchmarked to see the optimal `batch_size` for the `HuggingfaceModelConfig` flow. The answer is \"It depends on your data token length, your GPU memory, your LLM size, etc.\" In the following experiment, we use a GPU with 24G memory and a quantized LLM (2G). We still use the above 400 raw data strings `raw_context_input_400`.\n",
+    "\n",
+    "\n",
+    "Here are the results:\n",
+    "\n",
+    "- batch_size = 1\n",
+    "    100%|██████████| 400/400 [20:35<00:00,  3.09s/it]\n",
+    "- batch_size = 8\n",
+    "    100%|██████████| 50/50 [15:00<00:00, 18.02s/it]\n",
+    "- batch_size = 16\n",
+    "    100%|██████████| 25/25 [08:26<00:00, 20.25s/it]\n",
+    "- batch_size = 32\n",
+    "    100%|██████████| 13/13 [05:13<00:00, 24.09s/it]\n",
+    "- batch_size = 64\n",
+    "    100%|██████████| 7/7 [03:42<00:00, 31.75s/it]\n",
+    "- batch_size = 128\n",
+    "    100%|██████████| 4/4 [02:57<00:00, 44.33s/it]\n",
+    "- batch_size = 256: OOM\n",
+    "\n",
+    "As you can see, the processing time is much shorter if `batch_size=128` compared with `batch_size=1`. However, it might lead to OOM error if `batch_size` is too large."
    ]
   }
  ],
