--- a/example/model/openai_pdf_source_10k.ipynb
+++ b/example/model/openai_pdf_source_10k.ipynb
@@ -266,13 +266,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we call the `run` method on the `client` object to execute the question-answer generation operation on the data shown above."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -286,6 +279,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now we call the `run` method on the `client` object to execute the question-answer generation operation on the data shown above.\n",
+    "\n",
     "Note sometimes the LLM doesn't return a JSON output, then uniflow will handle the failure and auto retry generating a new output."
    ]
   },
