finish running end to end

--- a/example/model/huggingface_model.ipynb
+++ b/example/model/huggingface_model.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample size of raw context:  400\n"
+     ]
+    }
+   ],
    "source": [
     "raw_context_input = [\n",
     "    \"\"\"We believe our success depends upon our capabilities in areas such as design, research and development, \\\n",
@@ -149,14 +157,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, for the given raw text strings `raw_context_input` below, we can decorate them with our sample prompts. "
+    "Next, for the given raw text strings `raw_context_input` above, we can decorate them with our sample prompts. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample size of processed raw context with prompts:  400\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -167,7 +182,7 @@
        "   {'context': 'The quick brown fox jumps over the lazy black dog.',\n",
        "    'question': 'What is the color of the dog?',\n",
        "    'answer': 'black.'},\n",
-       "   {'context': 'We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.'}]},\n",
+       "   {'context': 'We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party \\\\ \\ninfringement and misappropriation.'}]},\n",
        " {'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.',\n",
        "  'examples': [{'context': 'The quick brown fox jumps over the lazy dog.',\n",
        "    'question': 'What is the color of the fox?',\n",
@@ -175,26 +190,10 @@
        "   {'context': 'The quick brown fox jumps over the lazy black dog.',\n",
        "    'question': 'What is the color of the dog?',\n",
        "    'answer': 'black.'},\n",
-       "   {'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.'}]},\n",
-       " {'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.',\n",
-       "  'examples': [{'context': 'The quick brown fox jumps over the lazy dog.',\n",
-       "    'question': 'What is the color of the fox?',\n",
-       "    'answer': 'brown.'},\n",
-       "   {'context': 'The quick brown fox jumps over the lazy black dog.',\n",
-       "    'question': 'What is the color of the dog?',\n",
-       "    'answer': 'black.'},\n",
-       "   {'context': 'The chain rule states that the derivative of a composite function (a function composed of another function) is equal to the derivative of the outer function multiplied by the derivative of the inner function. Mathematically, it can be written as: \\\\(\\x0crac{d}{dx}g(h(x)) = \\x0crac{dg}{dh}(h(x))\\\\cdot \\x0crac{dh}{dx}(x)\\\\).'}]},\n",
-       " {'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.',\n",
-       "  'examples': [{'context': 'The quick brown fox jumps over the lazy dog.',\n",
-       "    'question': 'What is the color of the fox?',\n",
-       "    'answer': 'brown.'},\n",
-       "   {'context': 'The quick brown fox jumps over the lazy black dog.',\n",
-       "    'question': 'What is the color of the dog?',\n",
-       "    'answer': 'black.'},\n",
-       "   {'context': 'Hypothesis testing involves making a claim about a population parameter based on sample data, and then conducting a test to determine whether this claim is supported or rejected. This typically involves calculating a test statistic, determining a significance level, and comparing the calculated value to a critical value to obtain a p-value. '}]}]"
+       "   {'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.'}]}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,23 +204,10 @@
     "    {\"instruction\": sample_instruction, \"examples\": sample_json_format + [{\"context\": data}]}\n",
     "    for data in raw_context_input_400\n",
     "]\n",
-    "print(\"sample size of processed raw context with prompts: \", len(raw_context_input_400_with_prompt))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's print the first two data points:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_context_input_with_prompt[:2]"
+    "\n",
+    "print(\"sample size of processed raw context with prompts: \", len(raw_context_input_with_prompt))\n",
+    "\n",
+    "raw_context_input_with_prompt[:2]\n"
    ]
   },
   {
@@ -237,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -248,25 +234,32 @@
       "  _torch_pytree._register_pytree_node(\n",
       "/opt/conda/envs/uniflow_no_installed/lib/python3.10/site-packages/transformers/utils/generic.py:309: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
       "  _torch_pytree._register_pytree_node(\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:09<00:00,  4.62s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:09<00:00,  4.67s/it]\n"
      ]
     }
    ],
    "source": [
-    "config = HuggingfaceConfig(model_config=HuggingfaceModelConfig(batch_size=256))\n",
+    "config = HuggingfaceConfig(model_config=HuggingfaceModelConfig(batch_size=128))\n",
     "client = Client(config)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we call the `run` method on the `client` object to execute the question-answer generation operation on the data shown above.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1 [00:00<?, ?it/s]"
+      "  0%|          | 0/4 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -275,7 +268,7 @@
      "text": [
       "/opt/conda/envs/uniflow_no_installed/lib/python3.10/site-packages/bitsandbytes/nn/modules.py:228: UserWarning: Input type into Linear4bit is torch.float16, but bnb_4bit_compute_type=torch.float32 (default). This will lead to slow inference or training speed.\n",
       "  warnings.warn(f'Input type into Linear4bit is torch.float16, but bnb_4bit_compute_type=torch.float32 (default). This will lead to slow inference or training speed.')\n",
-      "100%|██████████| 1/1 [00:13<00:00, 13.32s/it]\n"
+      "100%|██████████| 4/4 [03:01<00:00, 45.29s/it]\n"
      ]
     }
    ],
@@ -294,9 +287,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'context': ' We believe our success depends upon our capabilities in areas '\n",
+      "            'such as design, research and development, production and '\n",
+      "            'marketing and is supported and protected by our intellectual '\n",
+      "            'property rights, such as trademarks, utility and design patents, '\n",
+      "            'copyrights, and trade secrets, among others. We have followed a '\n",
+      "            'policy of applying for and registering intellectual property '\n",
+      "            'rights in the United States and select foreign countries on '\n",
+      "            'trademarks, inventions, innovations and designs that we deem '\n",
+      "            'valuable. W e also continue to vigorously protect our '\n",
+      "            'intellectual property, including trademarks, patents and trade '\n",
+      "            'secrets against third-party \\\\ \\n'\n",
+      "            'infringement and misappropriation.\\n',\n",
+      " 'question': ' How does the company protect their intellectual property?\\n',\n",
+      " 'answer': ' The company protects their intellectual property through various '\n",
+      "           'means such as trademarks, patents, copyrights, and trade secrets. '\n",
+      "           'They apply for and register these intellectual properties in the '\n",
+      "           'US and select foreign countries where they consider them valuable. '\n",
+      "           'Additionally, they actively monitor and enforce their intellectual '\n",
+      "           'property rights against infringement and misappropriation.'}\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "from pprint import pprint\n",
@@ -304,7 +323,7 @@
     "keywords = [\"context:\", \"question:\", \"answer:\"]\n",
     "pattern = '|'.join(map(re.escape, keywords))\n",
     "\n",
-    "o = output[0]['output'][0]['response'][0]\n",
+    "o = output[0]['output'][0]['response'][0] ## we only postprocess the first output\n",
     "segments = [segment for segment in re.split(pattern, o) if segment.strip()]\n",
     "result = {\n",
     "    \"context\": segments[-3],\n",
@@ -319,6 +338,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Congrats! Your question answers from the given knowledge context are generated!\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
     "## Appendix\n",
     "\n",
     "We benchmarked to see the optimal `batch_size` for the `HuggingfaceModelConfig` flow. The answer is \"It depends on your data token length, your GPU memory, your LLM size, etc.\" In the following experiment, we use a GPU with 24G memory and a quantized LLM (2G). We still use the above 400 raw data strings `raw_context_input_400`.\n",
