--- a/example/model/nougat_preprocess.ipynb
+++ b/example/model/nougat_preprocess.ipynb
@@ -61,8 +61,8 @@
     "import pandas as pd\n",
     "from uniflow.client import Client\n",
     "from uniflow.config import Config\n",
-    "from uniflow.model.config import OpenAIModelConfig\n",
-    "from uniflow.config import NougatConfig"
+    "from uniflow.model.config import OpenAIModelConfig, NougatModelConfig\n",
+    "from uniflow.config import NougatConfig\n"
    ]
   },
   {
@@ -104,7 +104,12 @@
     "    {\"pdf\": input_file},\n",
     "]\n",
     "\n",
-    "config = NougatConfig()\n",
+    "config = NougatConfig(\n",
+    "    model_config=NougatModelConfig(\n",
+    "        model_name = \"0.1.0-small\",\n",
+    "        batch_size = 1 # When batch_size>1, nougat will run on CUDA, otherwise it will run on CPU\n",
+    "    )\n",
+    ")\n",
     "nougat_client = Client(config)\n",
     "\n",
     "output = nougat_client.run(data)\n"
